--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -63,7 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# pull in data, trim entraneous detail, cast to float\n",
+    "data = np.loadtxt('data/mhu.csv', delimiter=',', dtype=str)[1:,:2].astype('float64')\n",
+    "\n",
+    "# plot\n",
+    "plt.plot(data[:,:1], data[:,1:])"
    ]
   },
   {
