--- a/Great_Lakes_and_Grand_River.ipynb
+++ b/Great_Lakes_and_Grand_River.ipynb
@@ -99,7 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Insert Code Here"
+    "# Insert Code Here\n",
+    "data = np.loadtxt('data/eri.csv', delimiter=',', dtype=str)[1:,:2].astype('float64')\n",
+    "\n",
+    "plt.plot(data[:,:1], data[:,1:])"
    ]
   },
   {
@@ -290,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
